--- a/.github/workflows/finish-release.yml
+++ b/.github/workflows/finish-release.yml
@@ -125,7 +125,10 @@ jobs:
         with:
           channel-id: ${{ needs.properties.outputs.slack-channel }}
           payload: >-
-            { "blocks": [
+            {
+              "text": "Release <${{ steps.release.outputs.url }} | ${{ inputs.version }}> has been published. Consult the tracker for next steps.",
+
+              "blocks": [
 
             { "type": "section", "text": { "type": "mrkdwn", "text":
             ":${{ fromJSON('["desert", "white_check_mark"]')[github.event.inputs.dry-run != 'true'] }}:
@@ -135,5 +138,7 @@ jobs:
             ":arrow_right: Tell the downstream release engineer to trigger the downstream release,
             and once the downstream release is complete, merge the PR created by CI in
             <https://github.com/stackrox/release-artifacts/pulls|stackrox/release-artifacts>
-            repository." }}
+            repository." }},
+            { "type": "section", "text": { "type": "mrkdwn", "text":
+            ":arrow_right: Check the status of the upstream CI for the tag in <https://prow.ci.openshift.org/?repo=stackrox%2Fstackrox&job=*release-${{ needs.variables.outputs.release }}*|Openshift CI> and follow up on any failures." }}
             ]}
