--- a/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
@@ -565,7 +565,7 @@ spec:
         displayName: Bypass
         path: admissionControl.bypass
       - description: The number of replicas of the admission control pod.
-        displayName: Default Replicas
+        displayName: Replicas
         path: admissionControl.replicas
       - description: Allows overriding the default resource settings for this component.
           Please consult the documentation for an overview of default resource requirements
