--- a/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
@@ -619,7 +619,7 @@ spec:
         displayName: Scanner Component Settings
         path: scanner
       - description: The number of replicas of the admission control pod.
-        displayName: Default Replicas
+        displayName: Replicas
         path: admissionControl.replicas
       - description: Allows you to specify additional trusted Root CAs.
         displayName: TLS
