--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -111,7 +111,8 @@
         "clean": "rm -rf ./cypress/test-results",
         "start": "DISABLE_ESLINT_PLUGIN=true HTTPS=true react-app-rewired start",
         "build": "DISABLE_ESLINT_PLUGIN=true CI=false GENERATE_SOURCEMAP=false react-app-rewired build",
-        "test": "JEST_JUNIT_UNIQUE_OUTPUT_NAME=true JEST_JUNIT_OUTPUT_DIR=${TEST_RESULTS_OUTPUT_DIR:-test-results}/reports react-app-rewired test --verbose=true --slowTestThreshold=1  --coverage --reporters=default --reporters=jest-junit",
+        "test": "JEST_JUNIT_UNIQUE_OUTPUT_NAME=true JEST_JUNIT_OUTPUT_DIR=${TEST_RESULTS_OUTPUT_DIR:-test-results}/reports react-app-rewired test --verbose=true --slowTestThreshold=1 --coverage=false --reporters=default --reporters=jest-junit",
+        "test-coverage": "JEST_JUNIT_UNIQUE_OUTPUT_NAME=true JEST_JUNIT_OUTPUT_DIR=${TEST_RESULTS_OUTPUT_DIR:-test-results}/reports react-app-rewired test --verbose=true --slowTestThreshold=1 --coverage --reporters=default --reporters=jest-junit",
         "test-watch": "react-app-rewired test",
         "lint": "NODE_PATH=src eslint --quiet --ext .js,.ts,.tsx src cypress tailwind.config.js .prettierrc.js .eslintrc.js",
         "lint:fix": "NODE_PATH=src eslint --fix --quiet --ext .js,.ts,.tsx src cypress tailwind.config.js .prettierrc.js .eslintrc.js",
