fix chmod again

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -41,6 +41,7 @@ jobs:
       env:
         TMPDIR: ${{ runner.temp }}
       run: |
+        chmod a+rwx .
         ${{ matrix.gotags }} su tester -c "make go-unit-tests"
 
     - name: Generate junit report
