fix(ci): install roxctl via make

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -558,7 +558,7 @@ jobs:
 
       - name: Install roxctl
         run: |
-          ./scripts/ci/lib.sh install_built_roxctl_in_gopath
+          make cli-install
           roxctl version
 
       - name: Scan images
