Silence shellcheck error
shellcheck verifies github actions as well, and complains about single
quotes. Silence this particular error.

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -32,6 +32,7 @@ jobs:
     - name: Ignore dubious repository ownership
       run: |
         # Prevent fatal error "detected dubious ownership in repository" from recent git.
+        # shellcheck disable=SC2016
         git config --global --add safe.directory "$(pwd)"
         su tester -c 'git config --global --add safe.directory "$(pwd)"'
 
