refactor(image): Remove envsubst calls from builds

--- a/image/rhel/Dockerfile
+++ b/image/rhel/Dockerfile
@@ -10,6 +10,13 @@ RUN microdnf install tar gzip && tar -zxf /bundle.tar.gz
 
 FROM ${BASE_REGISTRY}/${BASE_IMAGE}:${BASE_TAG}
 
+ARG LABEL_VERSION
+ARG LABEL_RELEASE
+ARG QUAY_TAG_EXPIRATION
+ARG ROX_IMAGE_FLAVOR
+ARG ROX_PRODUCT_BRANDING
+ARG TARGET_ARCH=amd64
+
 LABEL name="main" \
       vendor="StackRox" \
       maintainer="support@stackrox.com" \
@@ -18,10 +25,6 @@ LABEL name="main" \
       version="${LABEL_VERSION}" \
       release="${LABEL_RELEASE}" \
       quay.expires-after="${QUAY_TAG_EXPIRATION}"
-
-ARG ROX_IMAGE_FLAVOR
-ARG ROX_PRODUCT_BRANDING
-ARG TARGET_ARCH=amd64
 
 ENV PATH="/stackrox:$PATH" \
     ROX_ROXCTL_IN_MAIN_IMAGE="true" \
