a space for parallel tests

--- a/qa-tests-backend/Makefile
+++ b/qa-tests-backend/Makefile
@@ -52,12 +52,12 @@ clean-generated-srcs:
 .PHONY: test
 test: compile
 	@echo "+ $@"
-	$(GRADLE) testBegin testRest $(GRADLE_TEST_ARGS)
+	$(GRADLE) testBegin testParallel testRest $(GRADLE_TEST_ARGS)
 
 .PHONY: bat-test
 bat-test: compile
 	@echo "+ $@"
-	$(GRADLE) testBegin testBAT $(GRADLE_TEST_ARGS)
+	$(GRADLE) testBegin testParallelBAT testBAT $(GRADLE_TEST_ARGS)
 
 .PHONY: smoke-test
 smoke-test: compile
