run reconciliation test last

--- a/qa-tests-backend/build.gradle
+++ b/qa-tests-backend/build.gradle
@@ -175,6 +175,13 @@ task testSMOKE(type: Test) {
 task testCOMPATIBILITY(type: Test) {
     useJUnitPlatform {
         includeTags "COMPATIBILITY"
+        excludeTags "SensorBounce"
+    }
+}
+
+task testCOMPATIBILITYSensorBounce(type: Test) {
+    useJUnitPlatform {
+        includeTags "COMPATIBILITY & SensorBounce"
     }
 }
 
