X-Smart-Squash: Squashed 16 commits:
d9b5706ba4 cut at external with single db
71c7255f71 additions
5383da7829 move external
2ea2f15f5b some adjustments to use external
2ec3fce269 debug
91f04f90f5 add flag to config map
465678fe39 dodge DB
410475c86d don't look at size
4c9140274e fix migration
c0add5cb99 use database name
ab37d15833 switch to a warning
5caf9effe1 remove schema
3ec9a425fc restore
ebb8709f66 cleanup
32136ad6e2 update change log
e10a59b692 style

--- a/image/templates/helm/stackrox-central/templates/01-central-08-external-db-configmap.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-08-external-db-configmap.yaml
@@ -12,8 +12,10 @@ data:
   central-external-db.yaml: |
     centralDB:
       {{- if ._rox.central.db.external }}
+      external: true
       source: {{ ._rox.central.db.source.connectionString }} statement_timeout={{ ._rox.central.db.source.statementTimeoutMs }} pool_min_conns={{ ._rox.central.db.source.minConns }} pool_max_conns={{ ._rox.central.db.source.maxConns }}
       {{- else }}
+      external: false
       source: >
         host=central-db.{{ .Release.Namespace }}.svc
         port=5432
