ROX-18085 fix tests

--- a/operator/config/manager/manager.yaml
+++ b/operator/config/manager/manager.yaml
@@ -32,6 +32,7 @@ spec:
         runAsNonRoot: true
       containers:
       - args:
+        - start
         - --leader-elect
         env:
         - name: RELATED_IMAGE_MAIN
