--- a/operator/config/crd/bases/platform.stackrox.io_centrals.yaml
+++ b/operator/config/crd/bases/platform.stackrox.io_centrals.yaml
@@ -943,11 +943,10 @@ spec:
                         type: string
                     type: object
                   scannerComponent:
-                    default: Enabled
                     description: If you do not want to deploy the Red Hat Advanced
                       Cluster Security Scanner, you can disable it here (not recommended).
-                      If you do so, all the settings in this section will have no
-                      effect.
+                      By default, the scanner is enabled. If you do so, all the settings
+                      in this section will have no effect.
                     enum:
                     - Enabled
                     - Disabled
