--- a/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
@@ -121,8 +121,9 @@ spec:
         displayName: Expose Endpoint
         path: scanner.monitoring.exposeEndpoint
       - description: If you do not want to deploy the Red Hat Advanced Cluster Security
-          Scanner, you can disable it here (not recommended). If you do so, all the
-          settings in this section will have no effect.
+          Scanner, you can disable it here (not recommended). By default, the scanner
+          is enabled. If you do so, all the settings in this section will have no
+          effect.
         displayName: Scanner Component
         path: scanner.scannerComponent
       - description: 'NOTE: Connecting to an external database is in Technology Preview.
