--- a/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
@@ -1087,6 +1087,8 @@ spec:
   relatedImages:
   - image: ''
     name: ''
+  skips:
+  - rhacs-operator.v4.1.0
   version: 0.0.1
   webhookdefinitions:
   - admissionReviewVersions:
