ROX-17687: Operator PSP recovery (#6815)

--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -36,6 +36,12 @@ jobs:
     - name: Go Unit Tests
       run: ${{ matrix.gotags }} make go-unit-tests
 
+   - name: Go Integration Unit Tests
+      run: ${{ matrix.gotags }} make integration-unit-tests
+
+    - name: Go Operator Integration Tests
+      run: ${{ matrix.gotags }} make -C operator/ test-integration
+
   go-postgres:
     strategy:
       matrix:
