--- a/image/templates/helm/stackrox-central/templates/99-openshift-monitoring.yaml
+++ b/image/templates/helm/stackrox-central/templates/99-openshift-monitoring.yaml
@@ -1,6 +1,6 @@
 {{- include "srox.init" . -}}
 
-{{- if ._rox.enableOpenShiftMonitoring -}}
+{{- if and ._rox.monitoring ._rox.monitoring.openshift ._rox.monitoring.openshift.enabled -}}
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
