ROX-17225: install service monitor in monitoring

--- a/pkg/helm/charts/tests/centralservices/testdata/helmtest/openshift-monitoring.test.yaml
+++ b/pkg/helm/charts/tests/centralservices/testdata/helmtest/openshift-monitoring.test.yaml
@@ -16,7 +16,7 @@ tests:
       expect: |
         .roles["central-prometheus-k8s"] | assertThat(. != null)
         .rolebindings["central-prometheus-k8s"] | assertThat(. != null)
-        .servicemonitors["central-monitor"] | assertThat(. != null)
+        .servicemonitors["central-monitor-stackrox-central-services-stackrox"] | assertThat(. != null)
 
     - name: "monitoring is exposed"
     - name: "enableOpenShiftMonitoring overrides central.exposeMonitoring"
