--- a/image/templates/helm/stackrox-central/templates/99-openshift-monitoring.yaml
+++ b/image/templates/helm/stackrox-central/templates/99-openshift-monitoring.yaml
@@ -48,12 +48,12 @@ subjects:
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: central-monitor
-  namespace: {{ .Release.Namespace }}
+  name: central-monitor-{{ .Release.Name }}-{{ .Release.Namespace }}
+  namespace: openshift-monitoring
   labels:
-    {{- include "srox.labels" (list . "servicemonitor" "central-monitor") | nindent 4 }}
+    {{- include "srox.labels" (list . "servicemonitor" (print "central-monitor-" .Release.Name "-" .Release.Namespace )) | nindent 4 }}
   annotations:
-    {{- include "srox.annotations" (list . "servicemonitor" "central-monitor") | nindent 4 }}
+    {{- include "srox.annotations" (list . "servicemonitor" (print "central-monitor-" .Release.Name "-" .Release.Namespace )) | nindent 4 }}
 spec:
   endpoints:
   - interval: 30s
