--- a/ui/apps/platform/package.json
+++ b/ui/apps/platform/package.json
@@ -25,7 +25,7 @@
         "classnames": "^2.3.2",
         "computed-style-to-inline-style": "^3.0.0",
         "connected-react-router": "^6.9.2",
-        "core-js": "^3.1.4",
+        "core-js": "^3.31.1",
         "d3-axis": "^1.0.12",
         "d3-brush": "^3.0.0",
         "d3-polygon": "^3.0.1",
@@ -163,9 +163,6 @@
         "typescript": "^5.1.5"
     },
     "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
+        "Chrome >= 80"
     ]
 }
