--- a/scanner/Makefile
+++ b/scanner/Makefile
@@ -7,25 +7,25 @@ export PATH
 # Set to empty string to echo some command lines which are hidden by default.
 SILENT ?= @
 
-SHELL = env GOBIN=$(GOBIN) PATH=$(PATH) /bin/bash
-BASE_DIR=$(CURDIR)
+SHELL = /bin/bash
+BASE_DIR = $(CURDIR)
 
 TAG := # make sure tag is never injectable as an env var
 
 ifdef CI
 ifneq ($(NIGHTLY_TAG),)
-TAG := $(NIGHTLY_TAG)
+	TAG := $(NIGHTLY_TAG)
 else ifneq ($(RELEASE_TAG),)
-TAG := $(RELEASE_TAG)
+	TAG := $(RELEASE_TAG)
 endif
 endif
 
 ifeq ($(TAG),)
-TAG=$(shell git describe --tags --abbrev=10 --dirty --long --exclude '*-nightly-*')
+	TAG=$(shell git describe --tags --abbrev=10 --dirty --long --exclude '*-nightly-*')
 endif
 
 DEFAULT_IMAGE_REGISTRY := quay.io/stackrox-io
-BUILD_IMAGE_VERSION=$(shell sed 's/\s*\#.*//' BUILD_IMAGE_VERSION)
+BUILD_IMAGE_VERSION := $(shell sed 's/\s*\#.*//' BUILD_IMAGE_VERSION)
 BUILD_IMAGE := $(DEFAULT_IMAGE_REGISTRY)/apollo-ci:$(BUILD_IMAGE_VERSION)
 
 ifeq ($(shell uname -ms),Darwin arm64)
@@ -39,11 +39,12 @@ else
 	GOARCH := amd64
 endif
 
-LOCAL_VOLUME_ARGS := -v$(CURDIR):/src:delegated -v $(GOPATH):/go:delegated
-GOPATH_WD_OVERRIDES := -w /src -e GOPATH=/go
-IMAGE_BUILD_FLAGS := -e CGO_ENABLED=0 -e GOOS=linux -e GOARCH=${GOARCH}
 BUILD_FLAGS := CGO_ENABLED=0 GOOS=linux GOARCH=${GOARCH}
 BUILD_CMD := go build -trimpath -ldflags="-X github.com/stackrox/stackrox/scanner/v4/internal/version.Version=$(TAG)" -o image/scanner/bin/scanner ./cmd
+
+LOCAL_VOLUME_ARGS := -v$(CURDIR):/src:delegated -v $(GOPATH):/go:delegated
+GOPATH_WD_OVERRIDES := -w /src -e GOPATH=/go
+IMAGE_BUILD_FLAGS := -e $(BUILD_FLAGS)
 
 #####################################################################
 ###### Binaries we depend on (need to be defined on top) ############
@@ -141,7 +142,10 @@ deps: go.mod
 	$(SILENT)echo "+ $@"
 	$(SILENT)go mod tidy
 ifdef CI
-	$(SILENT)git diff --exit-code -- go.mod go.sum || { echo "go.mod/go.sum files were updated after running 'go mod tidy', run this command on your local machine and commit the results." ; exit 1 ; }
+	$(SILENT)git diff --exit-code -- go.mod go.sum || { \
+		echo "go.mod/go.sum files were updated after running 'go mod tidy', run this command on your local machine and commit the results." ; \
+		exit 1 ; \
+	}
 	go mod verify
 endif
 	$(SILENT)touch deps
